Projet total/Assembleur/tests/bad/testfile-bad-instr-1.ms
; addi is not visible to the programmer : use 'add' instead
addi %rax %rbx 42